feat: Implement victory modal with confetti and custom audio, and update Mewtwo's card-flash effect.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
         </main>
 
         <div id="mewtwo-overlay" class="hidden">
-            <div class="message">Mewtwo!<br>Hyper Beam!</div>
+            <div class="message">Mewtwo!<br>Psychic Flash!</div>
         </div>
+
+        <div id="victory-modal" class="hidden">
+            <div class="modal-content">
+                <h2>Good Job Damian!</h2>
+                <div class="stars">★★★</div>
+                <button id="play-again-btn">Play Again</button>
+            </div>
+        </div>
+
+        <canvas id="confetti-canvas"></canvas>
     </div>
 
     <script src="script.js"></script>
